@@ -1,10 +1,10 @@
 package com.senac.CoffeShop.Controller;
 
-import com.senac.CoffeShop.Ingredientes.DadosAtualizarIngrediente;
-import com.senac.CoffeShop.Ingredientes.DadosCadastroIngrediente;
+import com.senac.CoffeShop.DTO.DadosAtualizarIngrediente;
+import com.senac.CoffeShop.DTO.DadosCadastroIngrediente;
+import com.senac.CoffeShop.DTO.DadosListagemIngredientes;
+import com.senac.CoffeShop.Ingredientes.*;
 
-import com.senac.CoffeShop.Ingredientes.DadosListagemIngredientes;
-import com.senac.CoffeShop.Ingredientes.Ingredientes;
 import com.senac.CoffeShop.Repository.IngredientesRepository;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
@@ -16,7 +16,7 @@ import java.util.List;
 
 
 @RestController
-@RequestMapping("/Ingredientes")
+@RequestMapping("Ingredientes")
 public class IngredientesControllerTeste {
 
     @Autowired
@@ -31,11 +31,8 @@ public class IngredientesControllerTeste {
     @GetMapping
     @Transactional
     public List<DadosListagemIngredientes> listar(){
-        List<Ingredientes> listaEntidades = repository.findAll();
-        return listaEntidades.stream()
-                .map(DadosListagemIngredientes::new)
-                .collect(java.util.stream.Collectors.toList());
-
+        List<DadosListagemIngredientes> ingredientesList = repository.findAll().stream().map(DadosListagemIngredientes:: new).toList();
+        return ingredientesList;
     }
 
 
@@ -46,32 +43,19 @@ public class IngredientesControllerTeste {
         return ResponseEntity.noContent().build();
     }
 
+
     @PutMapping("/{idIngrediente}")
     @Transactional
-    public ResponseEntity<Ingredientes> atualizar(
-            // O nome do parâmetro (@PathVariable) deve corresponder ao nome na URL ({idIngrediente})
-            @PathVariable Long idIngrediente,
-            @RequestBody @Valid DadosAtualizarIngrediente dados
+    public ResponseEntity<DadosListagemIngredientes> atualizar(
+            @PathVariable Long idIngrediente, // ID para buscar quem será atualizado
+            @RequestBody @Valid DadosAtualizarIngrediente dados // Dados para alteração
     ) {
-        // 1. Busca o ingrediente pelo ID. Retorna um Optional.
-        return repository.findById(idIngrediente)
-                .map(ingrediente -> {
-                    // 2. Se o ingrediente for encontrado:
-                    ingrediente.atualizarInformacoes(dados);
-                    // 3. Retorna 200 OK com o objeto atualizado no corpo.
-                    return ResponseEntity.ok(ingrediente);
-                })
-                .orElseGet(() ->
-                        // 4. Se o ingrediente NÃO for encontrado: Retorna 404 Not Found.
-                        ResponseEntity.notFound().build()
-                );
+        Ingredientes ingrediente = repository.getReferenceById(idIngrediente);
+
+        ingrediente.atualizarInformacoes(dados);
+
+        return ResponseEntity.ok(new DadosListagemIngredientes(ingrediente));
     }
 
 
-
-    //@DeleteMapping("/{id}") //parametro dinamico
-    //@Transactional
-    //public void excluir(@PathVariable Long id){ // Anotacao para receber o parametro dinamico
-    //  repository.deleteById(id);
-    //}
 }
